fix some btns + remove !important
the !important was breaking plenty already but

.MarketplaceAnnouncement .btn-outline-mktg:hover are another issue

These are auto generated with a #181818 border when in fact it should be white

We cant blindy replace based on $color $value where it comes to buttons its just too wide an assumption.

all outline buttons can be found at 

https://github.com/marketplace

--- a/src/main.css
+++ b/src/main.css
@@ -1513,27 +1513,33 @@
     background: transparent !important;
   }
   .btn-mktg {
-    background-color: rgba(/*[[base-color-rgb]]*/, 1) !important;
-    border-color: /*[[base-color]]*/ !important;
-    color: #ddd !important;
+    background-color: rgba(/*[[base-color-rgb]]*/, .9);
+    border-color: /*[[base-color]]*/;
+    color: #ddd;
   }
   .btn-mktg:hover {
-    filter: brightness(90%) !important;
+    background-color: rgba(/*[[base-color-rgb]]*/, 1);
+    border-color: /*[[base-color]]*/;
+    color: #eee;
   }
   .btn-outline-mktg {
-    background-color: transparent !important;
-    border-color: rgba(/*[[base-color-rgb]]*/, .8) !important;
-    color: /*[[base-color]]*/ !important;
+    background-color: transparent;
+    border-color: rgba(/*[[base-color-rgb]]*/, .9);
+    color: rgba(/*[[base-color-rgb]]*/, .9);
   }
   .btn-outline-mktg:hover {
-    background-color: transparent !important;
-    border-color: rgba(/*[[base-color-rgb]]*/, 1) !important;
-    color: /*[[base-color]]*/ !important;
+    background-color: transparent;
+    border-color: rgba(/*[[base-color-rgb]]*/, 1);
+    color: rgba(/*[[base-color-rgb]]*/, 1);
   }
   .MarketplaceAnnouncement .btn-outline-mktg {
-    background-color: transparent !important;
-    border-color: #eee !important;
-    color: #eee !important;
+    background-color: transparent;
+    border-color: #eee;
+    color: #eee;
+  }
+  .MarketplaceAnnouncement .btn-outline-mktg:hover {
+    color: #fff;
+    border-color: #fff;
   }
   /* blue box */
   .github-jobs-promotion p, .octotip, .bootcamp h1, .bootcamp-body,
